@@ -108,16 +108,18 @@ else
 fi
 
 # Check to select type checking fusinv_agent_commit
-if [ -z "${TYPE}" ]; then
-   if [ -z "$( echo ${fusinv_agent_commit} | tr -d [0-9a-f] )" ]; then
-      declare -r TYPE="development"
+if [ -n "${TYPE}" ]; then
+   if [ "$TYPE" == "development" ]; then
       option_nsis_define="$option_nsis_define -DFIAI_DEBUG_LEVEL=1"
-   elif [ -z "${fusinv_agent_commit##*-rc*}" ]; then
-      declare -r TYPE="candidate"
-      option_nsis_define="$option_nsis_define -DFIAI_DEBUG_LEVEL=1"
-   else
-      declare -r TYPE="stable"
    fi
+elif [ -z "$( echo ${fusinv_agent_commit} | tr -d [0-9a-f] )" ]; then
+   declare -r TYPE="development"
+   option_nsis_define="$option_nsis_define -DFIAI_DEBUG_LEVEL=1"
+elif [ -z "${fusinv_agent_commit##*-rc*}" ]; then
+   declare -r TYPE="candidate"
+   option_nsis_define="$option_nsis_define -DFIAI_DEBUG_LEVEL=1"
+else
+   declare -r TYPE="stable"
 fi
 option_nsis_define="$option_nsis_define -DPRODUCT_RELEASE_TYPE=$TYPE"
 
